--- a/backend/package.json
+++ b/backend/package.json
@@ -24,6 +24,8 @@
     "@adonisjs/core": "^5.9.0",
     "@adonisjs/lucid": "^18.4.0",
     "@adonisjs/repl": "^3.1.11",
+    "axios": "^1.7.8",
+    "dotenv": "^16.4.5",
     "luxon": "^3.5.0",
     "pg": "^8.13.1",
     "proxy-addr": "^2.0.7",
