feat: setup frontend with React, Vite, and SWC

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -3,6 +3,7 @@ HOST=0.0.0.0
 NODE_ENV=development
 APP_KEY=pieQvXTH3vYJecdEmPOBQKmy4QV0-Gix
 DRIVE_DISK=local
+API_GOOGLE=a11a21
 DB_CONNECTION=pg
 PG_HOST=localhost
 PG_PORT=5432
